node: update deps

--- a/package.json
+++ b/package.json
@@ -35,17 +35,17 @@
     "node": ">= 0.2.4"
   },
   "dependencies": {
-    "node-int64": "~0.3.0",
-    "q": "1.0.x",
-    "ws": "~0.4.32"
+    "node-int64": "^0.4.0",
+    "q": "^1.5.0",
+    "ws": "^3.1.0"
   },
   "devDependencies": {
-    "buffer-equals": "^1.0.3",
-    "commander": "2.1.x",
-    "connect": "2.7.x",
-    "istanbul": "^0.3.5",
-    "run-browser": "^2.0.1",
-    "tape": "~3.5.0"
+    "buffer-equals": "^1.0.4",
+    "commander": "^2.11.0",
+    "connect": "^3.6.3",
+    "istanbul": "^0.4.5",
+    "run-browser": "^2.0.2",
+    "tape": "^4.8.0"
   },
   "scripts": {
     "cover": "lib/nodejs/test/testAll.sh COVER",
